# rs_shortener

./: .gitignore  .terraform.lock.hcl  Cargo.toml  dynamo.tf  main.tf  variables.tf
src/: dynamo.rs  main.rs  url.rs
